--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-09</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul class="nav">
+      <li class="nav-list">
+        <a class="nav-item" href="./index.html">Go Back</a>
+      </li>
       <li class="nav-list">
         <a class="nav-item" href="./1-gallery.html">Gallery</a>
       </li>
@@ -16,5 +19,7 @@
         <a class="nav-item" href="./2-form.html">Form</a>
       </li>
     </ul>
+    <ul class="gallery"></ul>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
